# InnovativePracticeProject

./: .gitignore  CMakeLists.txt  EatFish.exe - 快捷方式.lnk  README.md  delete_enemy.ps1  index.html  main.js  style.css
.github/: copilot-instructions.md
game/: Background.js  Enemy.js  Game.js  GameUtils.js  Level.js  MyFish.js  PowerUp.js
include/: Background.h  ChineseText.h  Enemy.h  GameUtils.h  GameWindow.h  MyFish.h  PowerUp.h
src/: Background.cpp  ChineseText.cpp  Enemy.cpp  Enemy_new.cpp  GameUtils.cpp  GameWindow.cpp  MyFish.cpp  PowerUp.cpp  main.cpp
src/com/sxt/: Bg.java  GameUtils.java  GameWin.java  MyFish.java  PowerUp.java
tools/: check_png_alpha.py  convert_assets.py
